# ReferenceMiner

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CRAWLER.md  ENDPOINTS.md  README.md  TODO.md  build.bat  launcher.py  package-lock.json  package.json  projects.json  pyproject.toml  referenceminer.py  referenceminer.spec  requirements.txt  simple_crawler.py
citation-rules/: APA 7th Ed.md  GBT 7714-2015.md  MLA.md
docs/: SELECTOR_STRATEGIES.md
electron/: main.cjs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  router.ts  settings.css  style.css  types.ts  utils.ts
frontend/src-tauri/: tauri.conf.json
frontend/src/api/: client.ts
frontend/src/components/: AlertModal.vue  AnswerBlock.vue  BankFileSelectorModal.vue  BaseModal.vue  BaseToggle.vue  BibliographyEditor.vue  ChatWindow.vue  Cockpit.vue  CommandPalette.vue  ConfirmExtractMetadataModal.vue  ConfirmationModal.vue  CorpusSidebar.vue  CrawlerSearchModal.vue  CustomSelect.vue  (+24 more)
installer/: main.cjs  package.json  preload.cjs
installer/renderer/: app.js  index.html  styles.css
scripts/: deduplicate_sources.ps1  pdf_stats.py  prepare-offline-payload.ps1  set_version.bat  set_version.py
src/refminer/: __init__.py  cli.py  server.py  version.py
tests/: test_file_references_api.py  test_file_rename.py  test_file_rename_api.py  test_google_scholar_integration.py  test_google_scholar_pdf_parsing.py  test_metadata_extraction.py  test_reference_index.py  test_reference_parser.py  test_selector_engine.py  test_upload_metadata.py  test_wanfang_crawler.py
(+88 files in other folders)
