[project]
name = "referenceminer"
version = "1.2.0"
description = "ReferenceMiner - A tool for extracting and analyzing references from documents"
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF>=1.23.8",
    "python-docx>=1.1.0",
    "Pillow>=10.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "jieba>=0.42.1",
    "ftfy>=6.0.0",
    "pdf2bib>=1.2.0",
    "pikepdf>=8.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "huggingface_hub>=0.20.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
